// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--msg"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={19995}
      createdAt={0}
      description="book"
      id="1"
      key="1"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={2995}
      createdAt={-345600000}
      description="dress"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={29995}
      createdAt={345600000}
      description="grocery"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
